Fixing the spinner alignment icon with in the button styles.

--- a/src/common/components/vanilla-modules/button/customButton.css
+++ b/src/common/components/vanilla-modules/button/customButton.css
@@ -5,8 +5,13 @@
 .hasSpinner .text {
   /* hide text without chaning button width */
   opacity: 0;
-  text-indent: -999rem;
   position: absolute;
+}
+
+.hasSpinner .icon {
+  height: 13px;
+  top: -1px;
+  vertical-align: middle;
 }
 
 .bigger {
