--- a/src/common/style/vanilla/css/icons.css
+++ b/src/common/style/vanilla/css/icons.css
@@ -117,3 +117,8 @@
 .p-icon--xx-large {
   height: 3rem;
   width: 3rem; }
+
+[class*="p-button-"] [class*="p-icon-"] {
+  height: 13px;
+  top: -1px;
+  vertical-align: middle; }
